stylowanie ostatniej strony

--- a/end-page.html
+++ b/end-page.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="page">
-	<div style="display: flex; align-items: center; justify-content: center;">
+	<div style="display: flex; align-items: center; justify-content: center; font-family: 'Raleway'; font-weight: bold; height: 100%; font-size: 8mm">
 		koniec!
 	</div>
 </div>
