--- a/songs/003.html
+++ b/songs/003.html
@@ -17,35 +17,35 @@
 			</header>
 			<div class="content-wrapper">
 				<dl class="content">
-					<dt>a G a</dt>          <dd>Are you going to Scarborough Fair</dd>
-					<dt>C a C D a</dt>      <dd>Parsley, sage, rosemary and thyme</dd>
-					<dt>a C C G/B a G</dt>  <dd>Remember me to one who lives there</dd>
-					<dt>a G a</dt>          <dd>She once was a true love of mine</dd>
-					<dt></dt>               <dd></dd>
+					<dt>a G a</dt>				<dd>Are you going to Scarborough Fair</dd>
+					<dt>C a C D a</dt>			<dd>Parsley, sage, rosemary and thyme</dd>
+					<dt>a C C G/B a G</dt>		<dd>Remember me to one who lives there</dd>
+					<dt>a G a</dt>				<dd>She once was a true love of mine</dd>
+					<dt></dt>					<dd></dd>
 
-					<dt>a G a</dt>          <dd>Tell her to make me a cambric shirt</dd>
-					<dt>C a C D a</dt>      <dd>Parsley, sage, rosemary and thyme</dd>
-					<dt>a C C G/B a G</dt>  <dd>Without no seams nor needlework</dd>
-					<dt>a G a</dt>          <dd>Then she'll be a true love of mine</dd>
-					<dt></dt>               <dd></dd>
+					<dt>a G a</dt>				<dd>Tell her to make me a cambric shirt</dd>
+					<dt>C a C D a</dt>			<dd>Parsley, sage, rosemary and thyme</dd>
+					<dt>a C C G/B a G</dt>		<dd>Without no seams nor needlework</dd>
+					<dt>a G a</dt>				<dd>Then she'll be a true love of mine</dd>
+					<dt></dt>					<dd></dd>
 
-					<dt>a G a</dt>          <dd>Tell her to find me an acre of land</dd>
-					<dt>C a C D a</dt>      <dd>Parsley, sage, rosemary and thyme</dd>
-					<dt>a C C G/B a G</dt>  <dd>Between the salt water and the sea strands</dd>
-					<dt>a G a</dt>          <dd>Then she'll be a true love of mine</dd>
-					<dt></dt>               <dd></dd>
+					<dt>a G a</dt>				<dd>Tell her to find me an acre of land</dd>
+					<dt>C a C D a</dt>			<dd>Parsley, sage, rosemary and thyme</dd>
+					<dt>a C C G/B a G</dt>		<dd>Between the salt water and the sea strands</dd>
+					<dt>a G a</dt>				<dd>Then she'll be a true love of mine</dd>
+					<dt></dt>					<dd></dd>
 
-					<dt>a G a</dt>          <dd>Tell her to reap it with a sickle of leather</dd>
-					<dt>C a C D a</dt>      <dd>Parsley, sage, rosemary and thyme</dd>
-					<dt>a C C G/B a G</dt>  <dd>And gather it all in a bunch of heather</dd>
-					<dt>a G a</dt>          <dd>Then she'll be a true love of mine</dd>
+					<dt>a G a</dt>				<dd>Tell her to reap it with a sickle of leather</dd>
+					<dt>C a C D a</dt>			<dd>Parsley, sage, rosemary and thyme</dd>
+					<dt>a C C G/B a G</dt>		<dd>And gather it all in a bunch of heather</dd>
+					<dt>a G a</dt>				<dd>Then she'll be a true love of mine</dd>
 				</dl>
 			</div>
 		</div>
 
 		<div class="song">
 			<header>
-				<span class="title">Down by the Riverside</span>
+				<span class="title">Down By The Riverside</span>
 				<span class="author">TRADITIONAL</span>
 				<span class="tags">
 					<span class="tag non-polish"></span>
@@ -53,38 +53,38 @@
 			</header>
 			<div class="content-wrapper columns-2">
 				<dl class="content">
-					<dt>G</dt>          <dd>Gonna lay down my sword and shield</dd>
-					<dt>G</dt>          <dd>Down by the riverside</dd>
-					<dt>D7</dt>         <dd>Down by the riverside</dd>
-					<dt>G</dt>          <dd>Down by the riverside</dd>
-					<dt>G</dt>          <dd>Gonna lay down my sword and shield</dd>
-					<dt>D D7</dt>       <dd>Down by the riverside</dd>
-					<dt>G</dt>          <dd>Ain't gonna study war no more</dd>
-					<dt></dt>           <dd></dd>
+					<dt>G</dt>			<dd>Gonna lay down my sword and shield</dd>
+					<dt>G</dt>			<dd>Down by the riverside</dd>
+					<dt>D7</dt>			<dd>Down by the riverside</dd>
+					<dt>G</dt>			<dd>Down by the riverside</dd>
+					<dt>G</dt>			<dd>Gonna lay down my sword and shield</dd>
+					<dt>D D7</dt>		<dd>Down by the riverside</dd>
+					<dt>G</dt>			<dd>Ain't gonna study war no more</dd>
+					<dt></dt>			<dd></dd>
 
-					<dt>C</dt>          <dd>I ain't gonna study war no more</dd>
-					<dt>G</dt>          <dd>I ain't gonna study war no more</dd>
-					<dt>D D7</dt>       <dd>I ain't gonna study war no more</dd>
-					<dt>C</dt>          <dd>I ain't gonna study war no more</dd>
-					<dt>G</dt>          <dd>I ain't gonna study war no more</dd>
-					<dt>D D7</dt>       <dd>I ain't gonna study war no more</dd>
-					<dt></dt>           <dd></dd>
+					<dt>C</dt>			<dd>I ain't gonna study war no more</dd>
+					<dt>G</dt>			<dd>I ain't gonna study war no more</dd>
+					<dt>D D7</dt>		<dd>I ain't gonna study war no more</dd>
+					<dt>C</dt>			<dd>I ain't gonna study war no more</dd>
+					<dt>G</dt>			<dd>I ain't gonna study war no more</dd>
+					<dt>D D7</dt>		<dd>I ain't gonna study war no more</dd>
+					<dt></dt>			<dd></dd>
 
-					<dt>G</dt>          <dd>Gonna put on my long white robe</dd>
-					<dt>G</dt>          <dd>Down by the riverside</dd>
-					<dt>D7</dt>         <dd>Down by the riverside</dd>
-					<dt>G</dt>          <dd>Down by the riverside</dd>
-					<dt>G</dt>          <dd>Gonna put on my long white robe</dd>
-					<dt>D D7</dt>       <dd>Down by the riverside</dd>
-					<dt>G</dt>          <dd>Gonna study war no more</dd>
-					<dt></dt>           <dd></dd>
+					<dt>G</dt>			<dd>Gonna put on my long white robe</dd>
+					<dt>G</dt>			<dd>Down by the riverside</dd>
+					<dt>D7</dt>			<dd>Down by the riverside</dd>
+					<dt>G</dt>			<dd>Down by the riverside</dd>
+					<dt>G</dt>			<dd>Gonna put on my long white robe</dd>
+					<dt>D D7</dt>		<dd>Down by the riverside</dd>
+					<dt>G</dt>			<dd>Gonna study war no more</dd>
+					<dt></dt>			<dd></dd>
 
-					<dt>C</dt>          <dd>I ain't gonna study war no more</dd>
-					<dt>G</dt>          <dd>I ain't gonna study war no more</dd>
-					<dt>D D7</dt>       <dd>I ain't gonna study war no more</dd>
-					<dt>C</dt>          <dd>I ain't gonna study war no more</dd>
-					<dt>G</dt>          <dd>I ain't gonna study war no more</dd>
-					<dt>D D7</dt>       <dd>I ain't gonna study war no more</dd>
+					<dt>C</dt>			<dd>I ain't gonna study war no more</dd>
+					<dt>G</dt>			<dd>I ain't gonna study war no more</dd>
+					<dt>D D7</dt>		<dd>I ain't gonna study war no more</dd>
+					<dt>C</dt>			<dd>I ain't gonna study war no more</dd>
+					<dt>G</dt>			<dd>I ain't gonna study war no more</dd>
+					<dt>D D7</dt>		<dd>I ain't gonna study war no more</dd>
 				</dl>
 			</div>
 		</div>
