--- a/songs/006.html
+++ b/songs/006.html
@@ -9,29 +9,29 @@
 
 		<div class="song">
 			<header>
-				<span class="title">Wojenko, wojenko</span>
+				<span class="title">Wojenko, Wojenko</span>
 				<span class="author">TRADYCYJNA</span>
 			</header>
 			<div class="content-wrapper">
 				<dl class="content">
-					<dt>C G</dt>            <dd>Wojenko, wojenko, cóżeś ty za pani</dd>
-					<dt>F C</dt>            <dd>Że za tobą idą, że za tobą idą</dd>
-					<dt>G C</dt>            <dd>Chłopcy malowani</dd>
-					<dt></dt>           <dd></dd>
+					<dt>C G</dt>	<dd>Wojenko, wojenko, cóżeś ty za pani</dd>
+					<dt>F C</dt>	<dd>Że za tobą idą, że za tobą idą</dd>
+					<dt>G C</dt>	<dd>Chłopcy malowani</dd>
+					<dt></dt>		<dd></dd>
 
-					<dt>C G</dt>            <dd>Chłopcy malowani, sami wybierani</dd>
-					<dt>F C</dt>            <dd>Wojenko, wojenko, wojenko, wojenko</dd>
-					<dt>G C</dt>            <dd>Cóżeś ty za pani</dd>
-					<dt></dt>           <dd></dd>
+					<dt>C G</dt>	<dd>Chłopcy malowani, sami wybierani</dd>
+					<dt>F C</dt>	<dd>Wojenko, wojenko, wojenko, wojenko</dd>
+					<dt>G C</dt>	<dd>Cóżeś ty za pani</dd>
+					<dt></dt>		<dd></dd>
 
-					<dt>C G</dt>            <dd>Nie masz to jak w wojsku, dobrze tam człowiekowi</dd>
-					<dt>F C</dt>            <dd>Jak mu karabin dają, jak mu karabin dają</dd>
-					<dt>G C</dt>            <dd>I konika siodłowi</dd>
-					<dt></dt>           <dd></dd>
+					<dt>C G</dt>	<dd>Nie masz to jak w wojsku, dobrze tam człowiekowi</dd>
+					<dt>F C</dt>	<dd>Jak mu karabin dają, jak mu karabin dają</dd>
+					<dt>G C</dt>	<dd>I konika siodłowi</dd>
+					<dt></dt>		<dd></dd>
 
-					<dt>C G</dt>            <dd>Oj dajcież mi, dajcie, dajcie spokój święty</dd>
-					<dt>F C</dt>            <dd>Bo mnie w bój wysyłacie, bo mnie w bój wysyłacie</dd>
-					<dt>G C</dt>            <dd>Na śmierć, nie na święty</dd>
+					<dt>C G</dt>	<dd>Oj dajcież mi, dajcie, dajcie spokój święty</dd>
+					<dt>F C</dt>	<dd>Bo mnie w bój wysyłacie, bo mnie w bój wysyłacie</dd>
+					<dt>G C</dt>	<dd>Na śmierć, nie na święty</dd>
 				</dl>
 			</div>
 		</div>
@@ -43,29 +43,29 @@
 			</header>
 			<div class="content-wrapper columns-2">
 				<dl class="content">
-					<dt>C G</dt>            <dd>Hej, sokoły! omijajcie góry, lasy, doły</dd>
-					<dt>F C</dt>            <dd>Dzwon, dzwon, dzwoneczku</dd>
-					<dt>G C</dt>            <dd>Mój stepowy kwiat</dd>
-					<dt></dt>           <dd></dd>
+					<dt>C G</dt>	<dd>Hej, sokoły! omijajcie góry, lasy, doły</dd>
+					<dt>F C</dt>	<dd>Dzwon, dzwon, dzwoneczku</dd>
+					<dt>G C</dt>	<dd>Mój stepowy kwiat</dd>
+					<dt></dt>		<dd></dd>
 
-					<dt>C G</dt>            <dd>Żegnaj dziewczyno, urodziwa</dd>
-					<dt>F C</dt>            <dd>Już mnie więcej nie zobaczysz</dd>
-					<dt>G C</dt>            <dd>Bo mnie koń czeka siodłany</dd>
-					<dt></dt>           <dd></dd>
+					<dt>C G</dt>	<dd>Żegnaj dziewczyno, urodziwa</dd>
+					<dt>F C</dt>	<dd>Już mnie więcej nie zobaczysz</dd>
+					<dt>G C</dt>	<dd>Bo mnie koń czeka siodłany</dd>
+					<dt></dt>		<dd></dd>
 
-					<dt>C G</dt>            <dd>Hej, hej, hej sokoły!</dd>
-					<dt>F C</dt>            <dd>Omijajcie góry, lasy, doły</dd>
-					<dt>G C</dt>            <dd>Dzwon, dzwon, dzwoneczku</dd>
-					<dt></dt>           <dd></dd>
+					<dt>C G</dt>	<dd>Hej, hej, hej sokoły!</dd>
+					<dt>F C</dt>	<dd>Omijajcie góry, lasy, doły</dd>
+					<dt>G C</dt>	<dd>Dzwon, dzwon, dzwoneczku</dd>
+					<dt></dt>		<dd></dd>
 
-					<dt>C G</dt>            <dd>Na Ukrainie, tam gdzie step szeroki</dd>
-					<dt>F C</dt>            <dd>Wierna dziewczyna czeka na kochanka</dd>
-					<dt>G C</dt>            <dd>Stoi i płacze, serce jej się kraje</dd>
-					<dt></dt>           <dd></dd>
+					<dt>C G</dt>	<dd>Na Ukrainie, tam gdzie step szeroki</dd>
+					<dt>F C</dt>	<dd>Wierna dziewczyna czeka na kochanka</dd>
+					<dt>G C</dt>	<dd>Stoi i płacze, serce jej się kraje</dd>
+					<dt></dt>		<dd></dd>
 
-					<dt>C G</dt>            <dd>Hej, hej, hej sokoły!</dd>
-					<dt>F C</dt>            <dd>Omijajcie góry, lasy, doły</dd>
-					<dt>G C</dt>            <dd>Dzwon, dzwon, dzwoneczku</dd>
+					<dt>C G</dt>	<dd>Hej, hej, hej sokoły!</dd>
+					<dt>F C</dt>	<dd>Omijajcie góry, lasy, doły</dd>
+					<dt>G C</dt>	<dd>Dzwon, dzwon, dzwoneczku</dd>
 				</dl>
 			</div>
 		</div>
